--- a/ghi/app/src/index.css
+++ b/ghi/app/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  background-image: linear-gradient( 177.7deg,  rgba(79,104,112,1) 4.1%, rgba(150,198,214,1) 93.9% );  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
